# cc-taskboard-server

./: .gitignore  API.md  Cargo.toml  Dockerfile  README.md  compose.yaml  env.example
debug/: admin.py  auth.py  board.py  reg.py
src/: data.rs  main.rs  model.rs  postgres_fns.rs  setup.rs
src/core/: compat.rs  mod.rs
src/hyper_router/: auth.rs  data.rs  mod.rs  postgres_fns.rs  resp.rs  routes.rs  std_routes.rs
src/psql_handler/: key_gen.rs  mod.rs
src/sec/: auth.rs  color_vld.rs  key_gen.rs  mod.rs  tokens_vld.rs
