[package]
name = "cc-taskboard-server"
version = "1.1.1"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.9.3"
passwords = { version = "*", features = ["crypto"] }
rust-crypto = "^0.2"
chrono = { version = "0.4", features = ["serde"] }
