[package]
name = "cc-taskboard-server"
version = "1.3.1"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
base64 = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
custom_error = "1.9.2"
hyper = { version = "0.14", features = ["full"] }
passwords = { version = "*", features = ["crypto"] }
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime"] }
